terraform/terraform/main.tf
provider "aws" {

  region = var.region

}
 
# ---------------- VPC ----------------

resource "aws_vpc" "main" {

  cidr_block           = var.vpc_cidr

  enable_dns_support   = true

  enable_dns_hostnames = true
 
 tags = {

    Name = "streamline-vpc"

  }

}
 
resource "aws_internet_gateway" "igw" {

  vpc_id = aws_vpc.main.id

}
 
# ---------------- SUBNETS ----------------

resource "aws_subnet" "public" {

  count                   = 2

  vpc_id                  = aws_vpc.main.id

  cidr_block              = var.public_subnets[count.index]

  availability_zone       = var.azs[count.index]

  map_public_ip_on_launch = true
 
 tags = {

    Name = "public-subnet-${count.index + 1}"

  }

}
 
resource "aws_subnet" "private" {

  count             = 2

  vpc_id            = aws_vpc.main.id

  cidr_block        = var.private_subnets[count.index]

  availability_zone = var.azs[count.index]
 
 tags = {

    Name = "private-subnet-${count.index + 1}"

  }

}
 
# ---------------- ROUTES ----------------

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.main.id
 
 route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.igw.id

  }

}
 
resource "aws_route_table_association" "public_assoc" {

  count          = 2

  subnet_id      = aws_subnet.public[count.index].id

  route_table_id = aws_route_table.public.id

}
 
# ---------------- SECURITY GROUPS ----------------

resource "aws_security_group" "web_sg" {

  vpc_id = aws_vpc.main.id
 
 ingress {

    from_port   = 80

    to_port     = 80

    protocol    = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }
 
 ingress {

    from_port   = 22

    to_port     = 22

    protocol    = "tcp"

    cidr_blocks = [var.my_ip]

  }
 
 egress {

    from_port   = 0

    to_port     = 0

    protocol    = "-1"

    cidr_blocks = ["0.0.0.0/0"]

  }

}
 
resource "aws_security_group" "rds_sg" {

  vpc_id = aws_vpc.main.id
 
 ingress {

    from_port       = 3306

    to_port         = 3306

    protocol        = "tcp"

    security_groups = [aws_security_group.web_sg.id]

  }

}
# ---------------- EC2 ----------------

resource "aws_instance" "web" {

  count         = 2

  ami           = "ami-0b6c6ebed2801a5cb" # Ubuntu 22.04 LTS

  instance_type = "t3.micro"

  subnet_id     = aws_subnet.public[count.index].id

  key_name      = var.key_name

  vpc_security_group_ids = [aws_security_group.web_sg.id]

  tags = {
    Name = "web-server-${count.index + 1}"
  }
} 
# ---------------- LOAD BALANCER ----------------

resource "aws_lb" "alb" {

  name               = "streamline-alb"

  load_balancer_type = "application"

  security_groups    = [aws_security_group.web_sg.id]

  subnets            = aws_subnet.public[*].id

}
 
resource "aws_lb_target_group" "tg" {

  name     = "streamline-tg"

  port     = 80

  protocol = "HTTP"

  vpc_id   = aws_vpc.main.id

}
 
resource "aws_lb_listener" "listener" {

  load_balancer_arn = aws_lb.alb.arn

  port              = 80

  protocol          = "HTTP"
 
 default_action {

    type             = "forward"

    target_group_arn = aws_lb_target_group.tg.arn

  }

}
 
resource "aws_lb_target_group_attachment" "attach" {

  count            = 2

  target_group_arn = aws_lb_target_group.tg.arn

  target_id        = aws_instance.web[count.index].id

  port             = 80

}
 
# ---------------- RDS ----------------

resource "aws_db_subnet_group" "db_subnet" {

  name       = "db-subnet-group"

  subnet_ids = aws_subnet.private[*].id

}
 
resource "aws_db_instance" "mysql" {

  allocated_storage      = 20

  engine                 = "mysql"

  instance_class         = "db.t3.micro"

  username               = "admin"

  password               = "Admin12345!"

  db_name                = "streamlinedb"

  skip_final_snapshot    = true

  publicly_accessible    = false
 
 vpc_security_group_ids = [aws_security_group.rds_sg.id]

  db_subnet_group_name   = aws_db_subnet_group.db_subnet.name

}
